<resources>
    <string name="app_name">ApkGeming</string>
    <string name="hello">Hello</string>
    <string name="hayung">Hayung</string>
    <string name="home">Home</string>
    <string name="game">Game</string>
    <string name="news">News</string>
    <string name="shop">Shop</string>
    <string name="trending">TRENDING</string>
    <string name="rant">tugas ini sungguh melelahkan</string>

    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="profile">profile</string>
    <string name="nama">Nama</string>
    <string name="biodata">BIODATA</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="tentang_saya">Tentang Saya</string>
    <string name="riwayat_karir_game">Riwayat Karir Game</string>
    <string name="tidak_ada_informasi">Tidak ada informasi</string>
    <string name="gem">Games</string>
    <string name="jadwal_aktivitas">Jadwal Aktivitas</string>
    <string name="info2">Info terbaru tentang turnamen yang sedang diselenggarakan</string>
    <string name="info1">Pilih game kesukaanmu dan mainkan bersama teman</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="login">LOGIN</string>
    <string name="email2">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo_list">TODO LIST</string>
    <string name="firstname_lastname">FIRSTNAME LASTNAME</string>
    <string name="pasport">PASPORT</string>
    <string name="bla">Bla bla bla bla</string>
    <string name="schedule">Schedule</string>
    <string name="event">event</string>
    <string name="absent">ABSENT</string>
    <string name="edit">EDIT</string>
    <string name="simpan">SIMPAN</string>
    <string name="events">EVENT</string>
    <string name="nama_event">Nama Event</string>
    <string name="nama_jadwal">Nama Jadwal</string>
    <string name="jadwal">jADWAL</string>
    <string name="teams">TEAMS</string>
</resources>