<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Profile"
        android:background="@color/bg">

        <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/layoutHeader"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:background="@drawable/header_background"
      android:padding="10dp"
      app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textHello"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/pasport"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <RelativeLayout
            android:id="@+id/bio0"
            android:layout_width="350dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/white_rectangle_background">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgCard"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            app:cardCornerRadius="60dp"
            app:cardElevation="10dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/img"
                android:padding="3dp"/>
        </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/imgCard"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="25dp"
                android:layout_marginStart="200dp"
                android:text="@string/hayung"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:visibility="invisible"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bio"
            android:layout_width="350dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/bio0"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/white_rectangle_background">
            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/menu1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/pubg"
                android:scaleType="centerCrop"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/gradient2">

                <TextView
                    android:id="@+id/desk1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/gem"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/info1"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:layout_below="@id/desk1"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bio2"
            android:layout_width="350dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/bio"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/white_rectangle_background">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/menu2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/schedule"
                android:scaleType="centerCrop"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/gradient2">

                <TextView
                    android:id="@+id/desk2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/schedule"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/info2"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:layout_below="@id/desk2"/>


            </RelativeLayout>

        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>